[package]
name = "Rust-Bootcamp-Final-Project"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "example"
path = "src/example.rs"

[[bin]]
name = "concatenate"
path = "src/concatenate.rs"

[[bin]]
name = "calculator"
path = "src/calculator.rs"


[[bin]]
name = "customFilter"
path = "src/customFilter.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
